# cat-sound-cls

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  validation.npy  validation_output.txt
include/mfcc/: mfcc_params.h
inmp441/: .cproject  .mxproject  .project  CMakeLists.txt  inmp441.ioc  inmp441.launch
inmp441/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
inmp441/Core/Src/: dma.c  gpio.c  i2s.c  main.c  stm32f4xx_it.c
mfcc/test/Angry/: angry_1.mfcc  angry_4.mfcc  angry_5.mfcc
mfcc/test/Defense/: defense_1.mfcc  defense_2.mfcc  defense_4.mfcc
mfcc/test/Fighting/: fighting_1.mfcc  fighting_2.mfcc  fighting_3.mfcc  fighting_4.mfcc  fighting_5.mfcc
mfcc/test/Happy/: happy_2.mfcc  happy_4.mfcc  happy_5.mfcc
mfcc/test/HuntingMind/: huntingmind_4.mfcc  huntingmind_5.mfcc
mfcc/test/Mating/: mating_2.mfcc  mating_3.mfcc  mating_4.mfcc
mfcc/test/MotherCall/: mathercall_1.mfcc  mathercall_3.mfcc  mathercall_4.mfcc
mfcc/test/Paining/: paining_4.mfcc  paining_5.mfcc
mfcc/test/Resting/: resting_1.mfcc  resting_2.mfcc  resting_4.mfcc
mfcc/test/Warning/: warning_3.mfcc  warning_4.mfcc
mfcc/train/Angry/: angry_2.mfcc  angry_3.mfcc
mfcc/train/Defense/: defense_3.mfcc  defense_5.mfcc
mfcc/train/Happy/: happy_1.mfcc  happy_3.mfcc
mfcc/train/HuntingMind/: huntingmind_1.mfcc  huntingmind_2.mfcc  huntingmind_3.mfcc
mfcc/train/Mating/: mating_1.mfcc  mating_5.mfcc
mfcc/train/MotherCall/: mathercall_2.mfcc  mathercall_5.mfcc
mfcc/train/Paining/: paining_1.mfcc  paining_2.mfcc  paining_3.mfcc
mfcc/train/Resting/: resting_3.mfcc  resting_5.mfcc
mfcc/train/Warning/: warning_1.mfcc  warning_2.mfcc  warning_5.mfcc
script/: gen_validation.py  mfcc.py  train.py  validate_mfcc.py  validate_raw.py
sound-cls/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F407ZGTX_FLASH.ld  sound-cls.ioc
sound-cls-ai/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F407IGTX_FLASH.ld  gcc-arm-none-eabi.cmake  sound-cls-ai.ioc
sound-cls-ai/.ai/: cat_sound_cls_cat_sound_classification_model.h5_c_graph.json  cat_sound_cls_cat_sound_classification_model.h5_report.json  cat_sound_cls_null_c_graph.json  cat_sound_cls_null_report.json
sound-cls-ai/Core/Inc/: main.h
sound-cls-ai/Core/Src/: main.c  stm32f4xx_hal_msp.c
sound-cls-ai/X-CUBE-AI/App/: app_x-cube-ai.c  app_x-cube-ai.h  cat_sound_cls.c  cat_sound_cls.h  cat_sound_cls_config.h  cat_sound_cls_data.c  cat_sound_cls_data.h  cat_sound_cls_data_params.c  cat_sound_cls_data_params.h  cat_sound_cls_generate_report.txt
sound-cls/.ai/: cat_sound_cls_cat_sound_classification_model.h5_c_graph.json  cat_sound_cls_cat_sound_classification_model.h5_report.json  cat_sound_cls_null_c_graph.json  cat_sound_cls_null_report.json
sound-cls/Core/Inc/: mfcc.h  ppbuf.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
sound-cls/Core/Src/: fsmc.c  gpio.c  lcd.c  main.c  main.c.bak  main.c.bak2  mfcc.c  ppbuf.c  spi.c  stm32f4xx_it.c
sound-cls/USB_DEVICE/App/: usbd_cdc_if.c
sound-cls/X-CUBE-AI/App/: cat_sound_cls.c  cat_sound_cls.h  cat_sound_cls_config.h  cat_sound_cls_data.c  cat_sound_cls_data.h  cat_sound_cls_data_params.c  cat_sound_cls_data_params.h  cat_sound_cls_generate_report.txt
src/: monitor.cpp  systest.cpp  wav2mfcc-client.cpp
st7789/: .cproject  .mxproject  CMakeLists.txt  st7789.ioc
st7789/Core/Inc/: main.h
st7789/Core/Src/: fsmc.c  gpio.c  main.c  st7789.c
systest/: .cproject  .mxproject  .project  CMakeLists.txt  systest.ioc
systest/.ai/: cat_sound_cls_cat_sound_classification_model.h5_c_graph.json  cat_sound_cls_cat_sound_classification_model.h5_report.json  cat_sound_cls_null_report.json
systest/Core/Inc/: lcd.h  main.h  st7789.h  stm32f4xx_hal_conf.h
systest/Core/Src/: dma.c  i2s.c  main.c  st7789.c  stm32f4xx_it.c
systest/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
systest/X-CUBE-AI/App/: cat_sound_cls.c  cat_sound_cls.h  cat_sound_cls_config.h  cat_sound_cls_data.c  cat_sound_cls_data.h  cat_sound_cls_data_params.c  cat_sound_cls_data_params.h  cat_sound_cls_generate_report.txt
w25qxx/: .cproject  .mxproject  .project  CMakeLists.txt  w25qxx.ioc
w25qxx/Core/Inc/: main.h
w25qxx/Core/Src/: main.c  w25qxx.c
wav2mfcc-server/: .cproject  .mxproject  .project  CMakeLists.txt  wav2mfcc-server.ioc
wav2mfcc-server-igt6/: .cproject  .mxproject  .project  CMakeLists.txt  wav2mfcc-server-igt6.ioc
wav2mfcc-server-igt6/Core/Inc/: mfcc.h
wav2mfcc-server-igt6/Core/Src/: main.c  mfcc.c
wav2mfcc-server/Core/Src/: main.c
wav2mfcc-server/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
